# athene-engine

./: .env  .env.example  .gitignore  .gitmodules  CHANGELOG.md  Main.hs  Makefile  README.md  athene-engine.cabal  docker-compose.yml  jest.config.js  package.json  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  haskell-ci.yml  haskell.yml
bot/: Dockerfile  Gemfile  main.rb
bot/locale/: locale.rb
bot/model/: create.rb
bot/observ/: chan_info.rb  linking.rb
bot/states/: add_chan.rb  add_post.rb  find_partners.rb  main.rb  starting.rb
old/: docker-compose.yml
old/bot/: DATASHEET.md  Gemfile  console.rb  console.sh  main.rb
old/bot/locale/: locale.yml
old/bot/model/: connect.rb  create.rb  mapping.rb
old/bot/observ/: chan_info.rb
old/bot/states/: add_chan.rb  common.rb  main.rb  starting.rb
old/outdated/: Makefile  requirements.txt  setup.cfg
old/outdated/.github/ISSUE_TEMPLATE/: future_request.md
old/outdated/src.hy/athene_bot/: log.hy
old/outdated/src/API/: Telegram.hs
old/outdated/src/Data/: Favorites.hs  Review.hs
old/outdated/src/Grouping/: Activity.hs
outdated/: Dockerfile  athene-engine.cabal
outdated/src.hy/athene_bot/: simple_macros.hy  utils.hy
outdated/src/Data/: State.hs
postgres/: Dockerfile  start.sh
src/: Main.hs  UI.hs  main.ts  neo4j.ts
src.hy/athene_bot/: __init__.py  args.hy  config.hy  log.hy  macros.hy  main.hy  server.hy  sql.hy  type_helpers.hy  utils.hy
src.py/athene_bot/: __init__.py  args.py  config.py  log.py  main.py  type_helpers.py  utils.py
src/API/: Keyboard.hs  ReplyMarkup.hs  Telegram.hs
src/Control/: Async.hs  Database.hs  FreeState.hs  Notifications.hs  Restore.hs  TInter.hs
src/Data/: Context.hs  Favorites.hs  FreeState.hs  Logic.hs  Posts.hs  State.hs
src/TUI/: View.hs
src/models/: channel.ts  notification.ts  post.ts  post_log.ts  post_schedule.ts  post_template.ts  relations.ts  todo.md  user.ts
src/services/: chan_partners.ts
test/: all.test.ts  helperts.ts  likes.test.ts  likes.ts  partners.test.ts  partners.ts  posting.ts  scheduler.by_request.test.ts
