[metadata]
name = athene-py-bot
version = attr: athene_bot.__version__
description = collects channels stats
author = dm9pZCAq
license = GPLv3+

classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Lisp
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	athene_bot

install_requires =
	xdg
	mypy
	hy @ git+https://github.com/dm9pZCAq/hy@hy2py-recursive#egg=hy
	Telethon[cryptg]
	SQLAlchemy[aiosqlite]

python_requires = >=3.8

package_dir =
	=src.hy

[options.package_data]
	athene_bot =
		py.typed
		*.hy

[options.extras_require]
	dev =
		mypy
		SQLAlchemy[mypy]


[options.entry_points]
console_scripts =
	athene-py-bot = athene_bot.main:main

[mypy]
strict = true
plugins =
	sqlalchemy.ext.mypy.plugin

exclude =
	macros.py

[mypy-hy]
ignore_missing_imports = True
[mypy-telethon]
ignore_missing_imports = True
[mypy-telethon.utils]
ignore_missing_imports = True
[mypy-telethon.errors]
ignore_missing_imports = True
[mypy-telethon.tl.types]
ignore_missing_imports = True
